# nats_sidecar

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: BuildAtree.cmake
config/: example.yaml
sql/: generate_sidecar_attributes.sql
src/: config.cpp  config.hpp  event_bridge.cpp  event_bridge.hpp  lease_manager.cpp  lease_manager.hpp  main.cpp  schema_generator.cpp  schema_generator.hpp  sidecar.cpp  sidecar.hpp  subscription_manager.cpp  subscription_manager.hpp  tree_snapshot.hpp  worker_pool.cpp  worker_pool.hpp
tests/: integration_sidecar.py  test_event_bridge.cpp  test_sidecar_lifecycle.cpp  test_subscription_manager.cpp  test_worker_pool.cpp
triplets/: x64-linux.cmake
